Add favicon and correct clear day action

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 
     <button class="btn" id="clear-btn">Clear the day</button>
 
+    <div></div>
+
     <script type="module" src="index.js"></script>
 </body>
 
